# Intrinsic-Symmetry-Curve-Generation-

./: .gitignore  CMakeLists.txt  README.md  Results0001.isometry.6.off  Results0001.isometry.6.off.txt  Trilateral.sln  patch.patch  sampled_points_SCAPE.txt  sampled_points_TOSCA_CAT.txt
Executable/Exe/: imgui.ini  (+1 more)
Trilateral/: CMakeLists.txt  Trilateral.vcxproj  Trilateral.vcxproj.filters
Trilateral/Mesh/: 08_desc_new.dsc  descriptor.txt  trilateralfuncs.cpp
Trilateral/Mesh/SCB/: BenchmarkSettings.txt  Darwin_i386_SurfaceVis  Linux_x86_64_SurfaceVis  README.txt  RecompileAll  TestErrorAllVertices  TestErrorAuto  TestErrorCoarseSet  TestErrorSymmetry
Trilateral/Mesh/SCB/Results/: Corr_Animals.query  Corr_Humans.query  Corr_NRW.query  Corr_SHREC.query  Corr_Scape.query  SmallSet.query
Trilateral/Mesh/SCB/Results/Results_Corr_Animals/: BenchResult_BestConf_381_to_horse10.txt  BenchResult_BestConf_382_to_dog10.txt  BenchResult_BestConf_383_to_cat0.txt  BenchResult_BestConf_384_to_dog5.txt  BenchResult_BestConf_385_to_383.txt  BenchResult_BestConf_386_to_387.txt  BenchResult_BestConf_387_to_cat10.txt  BenchResult_BestConf_388_to_cat4.txt  BenchResult_BestConf_389_to_381.txt  BenchResult_BestConf_390_to_cat3.txt  BenchResult_BestConf_391_to_cat9.txt  BenchResult_BestConf_392_to_386.txt  BenchResult_BestConf_393_to_dog5.txt  BenchResult_BestConf_394_to_cat2.txt  (+286 more)
Trilateral/Mesh/meshes2/: cube.off  cubetest.off
Trilateral/Mesh/off/: 008_desc.dsc  008_desc_new.dsc  008_desc_new_2.dsc  spectral_mesh.off
Trilateral/Mesh/off/Descriptor/: 0.dsc  0001.isometry.1.off  0001.isometry.1.off0.700000.dsc  0001.isometry.10.off  0001.isometry.10.off0.700000.dsc  0001.isometry.11.off  0001.isometry.11.off0.700000.dsc  0001.isometry.12.off  0001.isometry.12.off0.700000.dsc  0001.isometry.13.off  0001.isometry.13.off0.700000.dsc  0001.isometry.14.off  0001.isometry.14.off0.700000.dsc  0001.isometry.15.off  0001.isometry.15.off0.700000.dsc  0001.isometry.2.off  0001.isometry.2.off0.700000.dsc  0001.isometry.3.off  0001.isometry.3.off0.700000.dsc  0001.isometry.4.off  0001.isometry.4.off0.700000.dsc  0001.isometry.5.off  0001.isometry.5.off0.700000.dsc  0001.isometry.6.off  0001.isometry.6.off0.700000.dsc  0001.isometry.7.off  0001.isometry.7.off0.700000.dsc  0001.isometry.8.off  0001.isometry.8.off0.700000.dsc  0001.isometry.9.off  0001.isometry.9.off0.700000.dsc  0002.isometry.1.off  0002.isometry.1.off0.700000.dsc  0002.isometry.10.dsc  0002.isometry.11.off  0002.isometry.12.off  0002.isometry.13.off  0002.isometry.14.off  0002.isometry.15.dsc  0002.isometry.2.off  (+14 more)
Trilateral/Mesh/off/DomSym/: 0001.isometry.1.off0.700000.pln  0001.isometry.10.off0.700000.pln  0001.isometry.11.off0.700000.pln  0001.isometry.12.off0.700000.pln  0001.isometry.13.off0.700000.pln  0001.isometry.14.off0.700000.pln  0001.isometry.15.off0.700000.pln  0001.isometry.2.off0.700000.pln  0001.isometry.3.off0.700000.pln  0001.isometry.4.off0.700000.pln  0001.isometry.5.off0.700000.pln  0001.isometry.6.off0.700000.pln  0001.isometry.7.off0.700000.pln  0001.isometry.8.off  0001.isometry.8.off0.700000.pln  0001.isometry.9.off0.700000.pln  0002.isometry.1.off0.700000.pln  0002.isometry.10.off0.700000.pln  0002.isometry.11.off0.700000.pln  0002.isometry.12.off0.700000.pln  0002.isometry.13.off0.700000.pln  0002.isometry.14.off0.700000.pln  0002.isometry.15.off0.700000.pln  0002.isometry.2.off0.700000.pln  0002.isometry.3.off0.700000.pln  0002.isometry.4.off0.700000.pln  0002.isometry.5.off0.700000.pln  0002.isometry.6.off0.700000.pln  0002.isometry.7.off0.700000.pln  0002.isometry.8.off0.700000.pln  0002.isometry.9.off0.700000.pln  008_plane.pln
Trilateral/Mesh/off/KIDS_skeleton/: 0001.isometry.1.swc  0001.isometry.1.txt  0001.isometry.10.swc  0001.isometry.11.swc  0001.isometry.12.swc  0001.isometry.12.txt  0001.isometry.13.swc  0001.isometry.14.swc  0001.isometry.15.swc  0001.isometry.1_old.txt  0001.isometry.1_old2.txt  0001.isometry.2.swc  0001.isometry.3.swc  0001.isometry.4.swc  0001.isometry.4.txt  0001.isometry.5.swc  0001.isometry.6.swc  0001.isometry.7.swc  0001.isometry.8.swc  0001.isometry.9.swc  0002.isometry.1.swc  0002.isometry.10.swc  0002.isometry.11.swc  0002.isometry.12.swc  0002.isometry.13.swc  0002.isometry.14.swc  0002.isometry.15.swc  0002.isometry.2.swc  0002.isometry.3.swc  0002.isometry.4.swc  0002.isometry.5.swc  0002.isometry.6.swc  0002.isometry.7.swc  0002.isometry.8.swc  0002.isometry.9.swc  skeletonSpectral.swc
Trilateral/shaders/: LinePointFragment.shader  LinePointVertex.shader  MeshVertex.shader  shader.txt
Trilateral/src/: CMakeLists.txt
Trilateral/src/Application/: CMakeLists.txt  main.cpp
Trilateral/src/Application/Include/: Callback.h  Camera.h  CoreTypeDefs.h  CurvatureGeneration.h  DominantSymmetry.h  DvorakEstimatingApprox.h  FuzzyGeodesic.h  Geodesic.h  HeatKernelSignature.h  Histogram.h  HistogramFunctions.h  ImguiMenuBar.h  KIDS.h  Laplace-Beltrami.h  Mesh.h  MeshFactory.h  MeshFunctions.h  Mesh_imgui.h  MetricCalculations.h  NLateralDescriptor.h  NLateralMapping.h  Prototypes.h  ROI.h  RandomRocket.h  Ray.h  RaylibExtras.h  SCBDataset.h  Sampling.h  Shader.h  ShapeDiameter.h  Simulation.h  SkeletalNLateral.h  Skeleton.h  SkeletonTypes.h  SpinImage.h  SymmetryAwareEmbeddingForShapeCorrespondence.h  TrilateralDescriptor.h  TrilateralMap.h  TrilateralMap.h.rej  TrilateralMesh.h  (+4 more)
Trilateral/src/Application/Source/: Camera.cpp  CoreTypeDefs.cpp  CurvatureGeneration.cpp  DominantSymmetry.cpp  DvorakEstimatingApprox.cpp  FuzzyGeodesic.cpp  Geodesic.cpp  HeatKernelSignature.cpp  Histogram.cpp  HistogramFunctions.cpp  ImguiMenuBar.cpp  KIDS.cpp  Laplace-Beltrami.cpp  Mesh.cpp  MeshFactory.cpp  MetricCalculations.cpp  NLateralDescriptor.cpp  NLateralMapping.cpp  New Text Document.txt  ROI.cpp  Ray.cpp  RaylibExtras.cpp  SCBDataset.cpp  Sampling.cpp  ShapeDiameter.cpp  SkeletalNLateral.cpp  Skeleton.cpp  SpinImage.cpp  SymmetryAwareEmbeddingForShapeCorrespondence.cpp  TrilateralDescriptor.cpp  TrilateralMap.cpp  TrilateralMesh.cpp  VarianceMinimizingTransportPlan.cpp  Voronoi.cpp
(+2613 files in other folders)
